feat: release Orionis Control 0.2.3
